cmd/tscc/testdata/compiler/ArrowFunctionErrorSpan.txtar
# Ported from tests/cases/compiler/arrowFunctionErrorSpan.ts by tools/portcase.
# DO NOT EDIT by hand; re-run the porter if the upstream baseline changes.
! exec tscc --no-strict --target es2015 --lib es2015,dom --out-js arrowFunctionErrorSpan.js arrowFunctionErrorSpan.ts
stderr 'TS1200'
! exists arrowFunctionErrorSpan.js
! exists arrowFunctionErrorSpan.d.ts
! exists arrowFunctionErrorSpan.js.map

-- arrowFunctionErrorSpan.ts --
function f(a: () => number) { }

// oneliner
f(() => { });

// multiline, body
f(() => {

});

// multiline 2, body
f(() => {

});

// multiline 3, arrow on a new line
f(()
    => { });

// multiline 4, arguments
f((a,
    b,
    c,
    d) => { });

// single line with a comment
f(/*
    */() => { });

// multi line with a comment
f(/*
    */() => { });

// multi line with a comment 2
f(/*
    */() => { 

    });

// multi line with a comment 3
f(  // comment 1
    // comment 2
    () =>
    // comment 3
    {
        // comment 4
    }
    // comment 5
); 

// body is not a block
f(_ => 1 +
    2);
